# Pastelab

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/app/: ActionGrid.tsx  BottomBar.tsx  ClipInput.tsx  ClipPanel.tsx  CommandPalette.tsx  DetectionBar.tsx  FloatingBackground.tsx  HumanizePanel.tsx  KeyboardShortcutsModal.tsx  OnboardingModal.tsx  PreviewPanel.tsx  SettingsPanel.tsx  SplashScreen.tsx  index.ts
src/components/common/: index.ts
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx  index.ts
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  ScrollArea.tsx  Separator.tsx  ToastContainer.tsx  Tooltip.tsx  index.ts
src/context/: ThemeContext.tsx  ToastContext.tsx
src/hooks/: useClipboard.ts  useClipboardHistory.ts  useClipboardWatcher.ts  useDetection.ts  useSettings.ts  useTheme.ts
src/pages/: Dashboard.tsx  History.tsx  Pinned.tsx  Settings.tsx  index.ts
src/store/: clipboard.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: animations.ts  clipboard.ts  detectionUtils.ts  diff.ts  format.ts  humanize.ts  transforms.ts
