[package]
name = "pastelab"
version = "1.0.0"
description = "PasteLab — Paste anything. Improve everything."
authors = ["PasteLab Contributors"]
license = "MIT"
homepage = "https://github.com/DrextenMax/Pastelab"
repository = "https://github.com/DrextenMax/Pastelab"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pastelab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# ── Dev profile ───────────────────────────────────────────────────────────────
[profile.dev]
incremental = true

# ── Release profile — optimise for size and startup speed ─────────────────────
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
